src/components/about_us/AboutUs.css
.about-us-box {
    background-color: rgb(249, 249, 235, 0.01);
    position: relative;
    padding: 2rem;
    opacity: 1;
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-us-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: inherit;
    margin: 0.5rem;
    padding: 0.5rem;
}

.about-us-text {
    word-wrap: normal;
    font-size: medium;
    font-family: serif;
}

.dr-img {
    border-radius: 100%;
    height: 200px;
    width: 200px;
    align-self: center;
}

